tests/neg-custom-args/captures/unsound-reach-4.check
-- Error: tests/neg-custom-args/captures/unsound-reach-4.scala:16:18 ---------------------------------------------------
16 |class Bar extends Foo[File^]: // error
   |                  ^^^^^^^^^^
   |                  Type variable X of trait Foo cannot be instantiated to File^ since
   |                  that type captures the root capability `any`.
   |
   |                  where:    ^ refers to the root capability caps.any
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/unsound-reach-4.scala:20:29 ------------------------------
20 |  val backdoor: Foo[File^] = new Bar // error (follow-on, since the parent Foo[File^] of bar is illegal).
   |                             ^^^^^^^
   |                             Found:    Bar^'s1
   |                             Required: Foo[File^{any}]
   |
   |                             Note that capability `any²` cannot flow into capture set {any}
   |                             because any² in class Bar is not visible from any in value backdoor.
   |
   |                             where:    any  is a root capability in the type of value backdoor
   |                                       any² is a root capability created in class Bar
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/unsound-reach-4.scala:17:6 ---------------------------------
17 |  def use(consume x: F): File^ = x // error consume override
   |      ^
   |      error overriding method use in trait Foo of type (x: File^): File^²;
   |        method use of type (@consume x: File^): File^{fresh} has incompatible type
   |
   |      where:    ^     refers to the root capability caps.any
   |                ^²    refers to a root capability created in class Bar
   |                fresh is a root capability associated with the result type of (@consume x: File^): File^{fresh}
   |
   | longer explanation available when compiling with `-explain`
